[tool.poetry]
name = "pad-model"
version = "0.1.0"
description = ""
authors = ["alexdel <verbalab@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
pandas = "^2.1.0"
torch = ">=2.0.0, !=2.0.1"
transformers = "^4.33.2"
lightning = "^2.0.9"
tensorboard = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
